Added endpoint for setting a parameter